[workspace]
members = [
    "gaia-calculator/gaia-calculator-mcp-server",
    "gaia-calculator/gaia-calculator-mcp-client",
    "gaia-calculator/gaia-calculator-mcp-server-stdio",
    "gaia-weather/gaia-weather-mcp-server",
    "gaia-weather/gaia-weather-mcp-server-stdio",
    "gaia-weather/gaia-weather-mcp-client",
    "gaia-qdrant/gaia-qdrant-mcp-server",
    "gaia-qdrant/gaia-qdrant-common",
    "gaia-qdrant/gaia-qdrant-mcp-server-stdio",
    "gaia-qdrant/gaia-qdrant-mcp-client",
    "gaia-kwsearch/gaia-kwsearch-mcp-server",
    "gaia-kwsearch/gaia-kwsearch-common",
    "gaia-kwsearch/gaia-kwsearch-mcp-server-stdio",
    "gaia-kwsearch/gaia-kwsearch-mcp-client",
    "gaia-calculator/gaia-calculator-mcp-server-sse",
    "gaia-weather/gaia-weather-mcp-server-sse",
    "gaia-qdrant/gaia-qdrant-mcp-server-sse",
    "gaia-kwsearch/gaia-kwsearch-mcp-server-sse",
    "gaia-travel/gaia-travel-mcp-server", "gaia-travel/gaia-travel-mcp-client",
]
resolver = "3"

[workspace.dependencies]
rmcp                 = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", branch = "main" }
tokio                = "1"
serde                = "1.0"
serde_json           = "1.0"
anyhow               = "1.0"
tracing              = "0.1"
tracing-subscriber   = "0.3"
futures              = "0.3"
rand                 = "0.8"
schemars             = "0.8"
hyper                = "1"
hyper-util           = "0.1"
tokio-tungstenite    = "0.26.2"
reqwest              = "0.12"
pin-project-lite     = "0.2"
gaia-qdrant-common   = { path = "gaia-qdrant/gaia-qdrant-common" }
gaia-kwsearch-common = { path = "gaia-kwsearch/gaia-kwsearch-common" }
clap                 = { version = "4.4.6" }

[workspace.package]
edition    = "2024"
version    = "0.1.1"
repository = "https://github.com/apepkuss/mcp-examples"
license    = "Apache-2.0"
